코드의 구조 개선 : Nested 클래스 레코드로 전환